# KinematicBicycleModel

./: .gitignore  .gitmodules  .pylintrc  README.md  animate.py  dynamic_model.py  kinematic_model.py  pyproject.toml  requirements.txt  setup.py  taplo.toml
.github/: renovate.json
.github/workflows/: codeql.yml  formatter.yml  main.yml
data/: waypoints.csv
kbm/: __init__.py  __init__.pyi  exceptions.py  kbm.pyx  model.pyi  model.pyx
kbm/model/: __init__.pyi  model.pyx
libs/: __init__.py  car_description.py  cubic_spline_interpolator.py  normalise_angle.py  stanley_controller.py
tests/: conftest.py  test_model.py
