[project]
name = "kbm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "cython>=3.0.12",
    "matplotlib<=3.10.1",
    "nodejs-wheel-binaries>=22.14.0",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "scipath",
    "setuptools>=78.1.0",
]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kbm"]
ext-modules = [{ name = "kbm.model", sources = ["kbm/model.pyx"], extra-compile-args = ["-O3"] }]

[tool.uv]
reinstall-package = ["scipath"]

[tool.uv.sources]
scipath = { git = "https://github.com/winstxnhdw/scipath" }

[tool.ruff]
exclude = ["animate.py", "libs"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "INP001", "PYI001", "PYI021", "PLC0414", "PT013"]

[tool.pyright]
include = ["kbm"]
exclude = ["animate.py", "libs", ".venv"]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportMissingTypeStubs = false
