[project]
name = "kbm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "matplotlib<=3.10.8",
    "nodejs-wheel-binaries>=24.15.0",
    "pyright>=1.1.409",
    "pytest>=8.3.5",
    "ruff>=0.15.11",
    "scipath; python_version >= '3.9'",
]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kbm"]
ext-modules = [
    { name = "kbm.model", sources = ["kbm/model.pyx"], extra-compile-args = ["-ffast-math", "-march=native"] },
]

[tool.uv]
reinstall-package = ["scipath"]

[tool.uv.sources]
scipath = { git = "https://github.com/winstxnhdw/scipath" }

[tool.ruff]
exclude = ["animate.py", "libs"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "INP001", "PYI001", "PYI021", "PLC0414", "PT013"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportMissingTypeStubs = false
exclude = [
    "**/.*",
    "**/.venv",
    "**/__pycache__",
    "**/gxhash-*",
    "**/node_modules",
    "libs",
    "animate.py",
]
